[package]
name = "re-ebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
epub = "1"
fehler = "1.0.0"
serde = "1.0.144"
serde_derive = "1.0.144"
toml = "0.5"
